add link index.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
 
             <ul class="list navigation__menu">
                 <li class="navigation__item"><a class="link navigation__link"
-                        href="">Студия</a></li>
-                <li class="navigation__item"><a class="link navigation__link navigation__link--current" href="portfolio.html">Портфолио</a> </li>
+                        href="index.html">Студия</a></li>
+                <li class="navigation__item"><a class="link navigation__link navigation__link--current" href="">Портфолио</a> </li>
                 <li class="navigation__item"><a class="link navigation__link" href="">Контакты</a></li>
             </ul>
 
