ничего не получилось, вернула все как было(

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!--Шапка-->
 
-    <header class="header">
+    <!-- <header class="header">
 <div class="container header__container" >
 <nav class="navigation">
     <a class="link logo" lang="en" href=""> <span class="logo logo--static">Web</span>Studio</a>
@@ -50,7 +50,7 @@
 </ul>
 </div>
 
-    </header>
+    </header> -->
 
     <!--Главный контент-->
 
@@ -142,7 +142,7 @@
 
 <!--Чем мы занимаемся-->
 
-<section class="activity">
+<!-- <section class="activity">
     <div class="container">
 
     <h2 class="title">Чем мы занимаемся</h2>
@@ -168,11 +168,11 @@
     </div>
 
 
-</section>
+</section> -->
 
 <!--Наша команда-->
 
-<section class="team">
+<!-- <section class="team">
     <div class="container">
     <h2 class="title">Наша команда</h2>
 
@@ -348,11 +348,11 @@
     </li>
     </ul>
     </div>
-</section>
+</section> -->
 
 <!--Наши клиенты-->
 
-<section class="clients">
+<!-- <section class="clients">
         <div class="container">
         
             <h2 class="title">Постоянные клиенты</h2>
@@ -409,13 +409,13 @@
 
             </ul>
         </div>
-</section>
+</section> -->
 
     </main>
 
     <!--Подвал-->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
     <div class="container footer__container">
         <div class="adress-block">
         <a class="link logo logo__footer" href=""><span class="logo logo--static">Web</span>Studio</a>
@@ -487,7 +487,7 @@
 
     </div>
 
-    </footer>
+    </footer> -->
 
     <!--Modal-window-->
 
