--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <!-- Наши особенности -->
 
-<section class="features">
+<!-- <section class="features">
 <div class="container">
     <h2 class="visually-hidden">особенности</h2>
 
@@ -138,7 +138,7 @@
     </ul>
    
 </div>
-</section>
+</section> -->
 
 <!--Чем мы занимаемся-->
 
