--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 <body>
 
     <!--Шапка-->
-<header class="header">
+<!-- <header class="header">
     <div class="container header__container">
         <nav class="navigation">
             <a class="link logo" lang="en" href=""> <span class="logo logo--static">Web</span>Studio</a>
@@ -50,7 +50,7 @@
         </ul>
     </div>
 
-</header>
+</header> -->
     
     <!--Hero-->
 
