--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!--Шапка-->
 
-    <!-- <header class="header">
+    <header class="header">
 <div class="container header__container" >
 <nav class="navigation">
     <a class="link logo" lang="en" href=""> <span class="logo logo--static">Web</span>Studio</a>
@@ -48,9 +48,15 @@
         </svg>+38 096 111 11 11</a>
     </li>
 </ul>
+
+<button class="open-menu" type="button">
+    <svg class="menu" width="24" height="16">
+        <use href="./images/icon.svg#icon-menu"></use>
+    </svg>
+</button>
 </div>
 
-    </header> -->
+    </header>
 
     <!--Главный контент-->
 
