--- a/index.html
+++ b/index.html
@@ -49,11 +49,46 @@
     </li>
 </ul>
 
-<button class="open-menu" type="button">
-    <svg class="menu" width="24" height="16">
+<button class="open-menu-btn" type="button">
+    <svg class="open-menu-btn__icon" width="24" height="16">
         <use href="./images/icon.svg#icon-menu"></use>
     </svg>
 </button>
+</div>
+
+<div class="mob-menu">
+<button class="close-menu-btn" type="button">
+    <svg class="close-menu-btn__icon" width="24" height="16">
+        <use href="./images/icon.svg#icon-close-black-18dp-2-1-1"></use>
+    </svg>
+</button>
+
+<ul class="list mob-menu-nav">
+    <li class="mob-menu__item"><a class="link mob-menu__link mob-menu__link--current" href="">Студия</a></li>
+    <li class="mob-menu__item"><a class="link mob-menu__link " href="portfolio.html">Портфолио</a> </li>
+    <li class="mob-menu__item"><a class="link mob-menu__link" href="">Контакты</a></li>
+</ul>
+
+<ul class="list mob-menu-contacts">
+
+    <li class="mob-menu-contacts__item"><a class="link mob-menu-contacts__link" 
+        href="mailto:info@devstudio.com">
+        info@devstudio.com</a>
+    </li>
+
+
+    <li class="mob-menu-contacts__item"><a class="link mob-menu-contacts__link" 
+        href="tel:+38-096-111-11-11">
+    +38 096 111 11 11</a>
+    </li>
+</ul>
+
+<ul class="mob-menu-social">
+    <li class="mob-menu-social__item"><a href="" class="mob-menu-social__link">Instagram</a></li>
+    <li class="mob-menu-social__item"><a href="" class="mob-menu-social__link">Twitter</a></li>
+    <li class="mob-menu-social__item"><a href="" class="mob-menu-social__link">Facebook</a></li>
+<li class="mob-menu-social__item"><a href="" class="mob-menu-social__link">LinkedIn</a></li>
+</ul>
 </div>
 
     </header>
