--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
  
 
     <li class="contacts__item"><a class="link contacts__link" href="tel:+38-096-111-11-11">
-        <svg class="contacts__icon" width="10" height="16">
+        <svg class="contacts__icon contacts__icon--tel" width="10" height="16">
             <use href="./images/icon.svg#icon-smartphone-1"> </use>
         </svg>+38 096 111 11 11</a>
     </li>
